--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -81,3 +81,10 @@
   //   border-right: 1px solid rgba(150, 150, 150, 0.2);
   // }
 }
+
+
+.bracket-matcher {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-bottom: 3px dotted lime;
+  position: absolute;
+}
